deploy with firebase new